Refactor pagination api
